# adaptiveneuralnetwork

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AI Ethics Framework  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_FORMATTING_SETUP.md  CONSOLIDATION.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  ESSAY_CLASSIFICATION_README.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_BENCHMARK_GUIDE.md  INTELLIGENCE_TEST_READINESS_CHECKLIST.md  KAGGLE_DATASETS_README.md  MULTI_DATASET_TRAINING_GUIDE.md  Makefile  PHASE2_SUMMARY.md  PHASE2_USAGE.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE3_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_SUMMARY.md  PHASE6_SUMMARY.md  POS_TAGGING_GUIDE.md  PRODUCTION_SIGNAL_PROCESSING.md  QUICKSTART.md  QUICKSTART_SUMMARY.md  README.md  RIGOROUS_INTELLIGENCE_IMPLEMENTATION.md  ROBUSTNESS_VALIDATION_GUIDE.md  ROLLING_HISTORY_IMPLEMENTATION.md  SECURITY.md  SMOKE_TESTS.md  SMOKE_TESTS_EXAMPLES.md  SMOKE_TEST_VALIDATION.md  SOCIAL_MEDIA_SENTIMENT_GUIDE.md  SPATIAL_DIMENSION_IMPLEMENTATION_SUMMARY.md  SQL_SECURITY_SUMMARY.md  (+74 more)
.github/workflows/: .pre-commit-config.yaml  README.md  adversarial-testing.yml  bitext-smoke-test.yml  bitext-train.yml  ci.yml  multi-dataset-training.yml
adaptiveneuralnetwork/: __init__.py  config.py
adaptiveneuralnetwork/api/: __init__.py  backend_factory.py  config.py  model.py
adaptiveneuralnetwork/applications/: __init__.py  advanced_language_understanding.py  continual_learning.py  curriculum_learning.py  dynamic_benchmarking.py  enhanced_memory_systems.py  few_shot_learning.py  iot_edge_integration.py  multimodal_vl.py  self_supervised_learning.py  sensory_processing.py
adaptiveneuralnetwork/automl/: __init__.py  config.py  engine.py  feature_engineering.py  feature_selection.py  optimization.py  pipeline.py  preprocessing.py
adaptiveneuralnetwork/benchmarks/: __init__.py  multimodal.py  text_classification.py
adaptiveneuralnetwork/core/: __init__.py  adaptive_pruning.py  consolidation.py  dynamics.py  jax_backend.py  layer_registry.py  model_builder.py  neuromorphic.py  nodes.py  phases.py  plugin_system.py  precision_phases.py  video_inference.py
api_integration/: ai.api  ai_api.py  human_api.py  signal_adapter.py  world_api.py
automl_results/: automl_results_minimal_20250921_083436.json
benchmark_history/: 2025-09-07T09-52-16Z.json
benchmark_results/: essay_classification_results.json
benchmarks/: baseline.json  module_dependencies.json  module_inventory.json  phase1_metrics.json  phase2_baseline.json  phase2_comparison.json
config/: network_config.py  network_config.yaml
core/: DEPRECATED.md  README.md  advanced_analytics.py  adversarial_benchmark.py  ai_ethics.py  alive_node.py  benchmark_documentor.py  capacitor.py  decision_transparency.py  ethical_learning.py  explainable_ai.py  intelligence_benchmark.py  network.py  neural_architecture_search.py  real_world_adapter.py  robustness_validator.py  social_learning.py  spatial_utils.py  time_manager.py  time_series_tracker.py  train.py  trust_network.py
data/: README.md
demos/: 3d_demo_results.json  README.md  demo_3d_capabilities.py  demo_capacitor_improvements.py  demo_continual_learning.py  demo_emotional_protocols.py  demo_enhanced_features.py  demo_enhanced_trust_system.py  demo_extended_emotional_states.py  demo_full_network.json  demo_full_network_timeseries.json  demo_network_status.json  demo_phase1_adaptive_learning.py  demo_production_signal_processing.py  demo_sql_security.py  demo_time_mitigation.py  demo_timeseries.json  demo_unified_training.py  demo_v030_features.py  demo_v3_neuromorphic.py  demonstrate_phase2_phase3.py  demonstrate_rigorous_intelligence.py  phase1_quick_demo.py
docs/: CALLBACK_ARCHITECTURE.md  ENHANCED_FEATURES.md  ETHICS_FRAMEWORK.md  IMPLEMENTATION_DETAILS.md  MIGRATION_GUIDE.md  PHASE6_EVALUATION.md  PHASE6_INTEGRATION.md  SCRIPT_CONSOLIDATION.md  SPATIAL_DIMENSIONS_GUIDE.md  TIME_MITIGATION.md  VIDEO_FEATURES.md  VIDEO_STREAMING_GUIDE.md  alive_loop_node_documentation.md  citation.cff  enhanced_trust_network_documentation.md  performance.md
eval/: __init__.py  comparison.py  drift_detection.py  metrics.py  microbenchmark.py  run_deterministic_eval.py  run_eval.py
examples/: README.md  phase4_trainer_examples.py  quickstart_example.py
experiments/: demo_test  extreme_scale_test.py
k8s/: deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
notebooks/: Video_Streaming_and_Temporal_Models.py
outputs/: dataset_info.json  hr_model_weights.json  hr_training_results.json
pos_tagging_output/: metrics_pos_tagging.json  training_config.json
results/: metrics.json
scripts/: generate_benchmark_table.py  phase0_dependencies.py  phase0_inventory.py  phase0_profiler.py  phase2_comparison.py  phase2_profiler.py  phase3_demo.py  run_benchmark.py  run_profiler.py  setup_phase3.py
simple_phase/: simple_advanced_demo.py  simple_phase3_demo.py  simple_phase5_demo.py  simple_phase5_minimal.py  simple_phase5_standalone.py  simple_v3_test.py
tests/: README.md  TEST_RESULTS.md  conftest.py  results.md  test_adaptive_learning.py  test_advanced_learning_paradigms.py  test_adversarial.py  test_adversarial_resilience.py  test_alive_node.py  test_alive_node_dataset_training.py  test_attack_resilience.py  test_basic_problem_solving.py  test_capacitor.py  test_cognitive_functioning.py  test_core_train.py  test_cross_domain_generalization.py  test_deceptive_signal.py  test_emotional_signals.py  test_energy_boundary.py  test_enhanced_features.py  test_enhanced_trust_network.py  test_entry_points.py  test_ethical_learning.py  test_explainable_ai.py  test_full_system.py  test_hr_analytics.py  test_intelligence_benchmark.py  test_multi_agent_collab.py  test_pattern_recognition.py  test_phase1_optimized_datasets.py  test_phase2_enhancements.py  test_phase2_optimizations.py  test_phase3_modularization.py  test_phase4_features.py  test_phase6_eval.py  test_pos_tagging.py  test_production_signal_processing.py  test_quickstart_features.py  test_real_world_simulation.py  test_rigorous_intelligence.py  (+9 more)
(+187 files in other folders)
